--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,10 +3,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <span class="text-muted">© 2024 Ethanol UI. All rights reserved.</span>
+                <span class="text-muted">© <span id="currentYear"></span> Ethanol UI. All rights reserved.</span>
             </div>
             <div class="col-md-6 text-md-end">
-                <span class="text-muted">Ethanol UI v1.0.0</span>
+                <span class="text-muted">Clean & Modern Admin Dashboard</span>
             </div>
         </div>
     </div>
