--- a/includes/scripts.html
+++ b/includes/scripts.html
@@ -1,14 +1,20 @@
 <!-- Bootstrap 5.3.8 CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
+<!-- Bootstrap Icons -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
+
 <!-- DataTables CSS -->
 <link href="https://cdn.datatables.net/2.3.5/css/dataTables.bootstrap5.css" rel="stylesheet">
+
+<!-- ApexCharts CSS -->
+<link href="https://cdn.jsdelivr.net/npm/apexcharts@3.44.0/dist/apexcharts.css" rel="stylesheet">
 
 <!-- Custom CSS -->
 <link href="../assets/css/custom.css" rel="stylesheet">
 <link href="../assets/css/themes.css" rel="stylesheet">
 
-<!-- jQuery -->
+<!-- jQuery 3.7.1 -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 <!-- Bootstrap 5.3.8 JS -->
@@ -21,10 +27,13 @@
 <!-- SweetAlert2 -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<!-- ApexCharts 3.44.0 -->
+<script src="https://cdn.jsdelivr.net/npm/apexcharts@3.44.0/dist/apexcharts.min.js"></script>
+
 <!-- Custom JS -->
-<script src="../assets/js/main.js"></script>
 <script src="../assets/js/theme.js"></script>
-<script src="../assets/js/datatable.js"></script>
 <script src="../assets/js/sweetalert.js"></script>
+<script src="../assets/js/datatable.js"></script>
 <script src="../assets/js/crud.js"></script>
+<script src="../assets/js/main.js"></script>
 
